# slm-fine-tuning

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  TODO.md  main.py  pyproject.toml
app/: labeling.py
notebooks/: training_explained.ipynb
scripts/: generate_synthetic_data.py  ingest_emails.py  mlflow-server.bat  split_data.py  train.py  validate_data.py
src/email_triage/: labels.py
src/email_triage/model/: __init__.py  classifier.py
src/email_triage/training/: __init__.py  metrics.py  trainer.py
tests/: test_dataset.py  test_email_parser.py  test_gmail.py  test_model.py  test_training.py
